--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ payment.process.job.cron= ${PAYMENT_PROCESS_JOB_CRON:1 * * * * *}
 #parallelism level
 number.threads= ${NUMBER_THREADS:4}
 threshold= ${THRESHOLD:10}
+
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=100
+spring.rabbitmq.listener.simple.retry.max-attempts=51
